Java 9 Support - Enable JSystem to run with Java 9 #319